java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable6-hints.pass
Create field foo in org.netbeans.test.java.hints.CreateLocalVariable6
Create parameter foo
Create local variable foo
